--- a/build.gradle
+++ b/build.gradle
@@ -18,8 +18,9 @@ dependencies {
     compile'org.testng:testng:6.14.3'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.141.59'
     compile group: 'org.concordion', name: 'cubano-webdriver-manager', version: '0.3.5'
-
-
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.7'
+    compile group: 'org.projectlombok', name: 'lombok', version: '1.18.12'
+    compile group: 'com.aventstack', name: 'extentreports', version: '4.0.9'
 
 }
 
